<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/venueListingDetailsMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".account.CreateVenueFragment"
    android:background="@drawable/gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="account.CreateVenueFragment">

    <EditText
        android:id="@+id/venue_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="280dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="Venue Description"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/venue_location" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Venue"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/venue_location"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:hint="Search For Your Venue Location"
        android:textColor="#FFF"
        android:textColorHint="#F6F6F6"
        android:theme="@style/AutoComplete"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/venue_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="280dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="Venue Name"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <View
        android:id="@+id/view"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/venue_name" />

    <View
        android:id="@+id/view8"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/venue_description" />


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:popupBackground="#FFFFFF"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/transparent_button"
        android:text="Submit"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textColorHint="#FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/uploadBtn"
            android:layout_width="133dp"
            android:layout_height="34dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/transparent_button"
            android:text="Upload Photo"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textColorHint="#FFFF"
            app:layout_constraintEnd_toStartOf="@+id/takeBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/takeBtn"
            android:layout_width="133dp"
            android:layout_height="34dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="68dp"
            android:background="@drawable/transparent_button"
            android:text="Take Photo"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textColorHint="#FFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/uploadBtn"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Venue Type"
            android:textColor="#FFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view8" />

        <ImageView
            android:id="@+id/imageViewVenue"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploadBtn"
            tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>